app-server.yaml
apiVersion: v1
kind: Pod
metadata:
 name: app-server1
spec: 
 containers: 
 - name: container1
   image: nginx
   imagePullPolicy: IfNotPresent
