new-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: app-server1-namespace
 namespace: development 
spec: 
 containers: 
 - name: container1
   image: nginx
   imagePullPolicy: IfNotPresent
