tor-appserver.yaml
apiVersion: v1
kind: Pod
metadata:
 name: app-server1-taint
spec: 
 containers: 
 - name: container1
   image: nginx
   imagePullPolicy: IfNotPresent
 tolerations: 
 - key: "app"
   operator: "Equal"
   value: "tester"
   effect: "NoSchedule"
