cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: myservice
spec:
 type: ClusterIP
 ports:
 - targetPort: 80
   port: 6000
 selector:
  app: web
