deploy-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
 name: deploy-myservice
spec:
 type: ClusterIP
 ports:
 - targetPort: 80
   port: 6000
 selector:
  app: prod
