loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: loadmyservice
spec:
 type: LoadBalancer
 ports:
 - targetPort: 80
   port: 6000
 selector:
  app: web
