nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: svc-nodeport
spec:
 type: NodePort
 ports:
 - targetPort: 80
   port: 80
   nodePort: 30005
 selector:
  app: web
