statefule.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx
 labels:
  app: stateful
spec:
 ports:
 - port: 80
   name: web
 clusterIP: None
 selector:
  app: stateful
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: web
spec:
 selector: 
  matchLabels:
   app: stateful
 serviceName: nginx
 replicas: 2
 template:
  metadata: 
   labels:
    app: stateful
  spec:
   containers:
   - name: nginx
     image: quay.io/gauravkumar9130/nginxdemo
     ports:
     - containerPort: 80
       name: web
     volumeMounts:
     - name: www
       mountPath: /mycontainerstate
 volumeClaimTemplates:
 - metadata:
    name: www
   spec:
    accessModes:
    - ReadWriteMany
    resources:
     requests:
      storage: "1.5Gi"
